src/test/ui/regions/regions-outlives-projection-container-hrtb.stderr
error[E0491]: in type `&'a WithHrAssoc<TheType<'b>>`, reference has a longer lifetime than the data it references
  --> $DIR/regions-outlives-projection-container-hrtb.rs:42:12
   |
LL |     let _: &'a WithHrAssoc<TheType<'b>> = loop { };
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the pointer is valid for the lifetime 'a as defined on the function body at 39:15
  --> $DIR/regions-outlives-projection-container-hrtb.rs:39:15
   |
LL | fn with_assoc<'a,'b>() {
   |               ^^
note: but the referenced data is only valid for the lifetime 'b as defined on the function body at 39:18
  --> $DIR/regions-outlives-projection-container-hrtb.rs:39:18
   |
LL | fn with_assoc<'a,'b>() {
   |                  ^^

error[E0491]: in type `&'a WithHrAssocSub<TheType<'b>>`, reference has a longer lifetime than the data it references
  --> $DIR/regions-outlives-projection-container-hrtb.rs:63:12
   |
LL |     let _: &'a WithHrAssocSub<TheType<'b>> = loop { };
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the pointer is valid for the lifetime 'a as defined on the function body at 59:19
  --> $DIR/regions-outlives-projection-container-hrtb.rs:59:19
   |
LL | fn with_assoc_sub<'a,'b>() {
   |                   ^^
note: but the referenced data is only valid for the lifetime 'b as defined on the function body at 59:22
  --> $DIR/regions-outlives-projection-container-hrtb.rs:59:22
   |
LL | fn with_assoc_sub<'a,'b>() {
   |                      ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0491`.
